k8s/dev/dev-minio-manifest.yaml
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-minio
  labels:
    app: minio
    chart: minio-2.5.15
    release: dev
    heritage: Tiller
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: dev

---
# Source: minio/templates/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-minio
  labels:
    app: minio
    chart: minio-2.5.15
    release: dev
    heritage: Tiller
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: minio
      release: dev
  template:
    metadata:
      name: dev-minio
      labels:
        app: minio
        release: dev
      annotations:
        checksum/secrets: 8a4fd81c77f8be7118d3db650ca4264eaab3f810bc55c625ca522a7ce839aaf4
        checksum/config: abb1b6245a09c75888e3d146d9c9c3980282f2654e11ee7fb29defd6fb64b482
    spec:
      serviceAccountName: "dev-minio"
      containers:
        - name: minio
          image: "minio/minio:RELEASE.2019-08-07T01-59-21Z"
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", 
          "-ce", 
          "/usr/bin/docker-entrypoint.sh minio -C /root/.minio/ server /export" ]
          volumeMounts:
            - name: export
              mountPath: /export
            - name: minio-config-dir
              mountPath: /root/.minio/
          ports:
            - name: service
              containerPort: 9000
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: service
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: service
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            
      volumes:
        - name: export
          persistentVolumeClaim:
            claimName: dev-minio
        - name: minio-user
          secret:
            secretName: dev-minio
        - name: minio-config-dir
          emptyDir: {}

---
# Source: minio/templates/ingress.yaml


---
# Source: minio/templates/networkpolicy.yaml


---
# Source: minio/templates/post-install-create-bucket-job.yaml


---
# Source: minio/templates/servicemonitor.yaml


---
# Source: minio/templates/statefulset.yaml
