k8s/dev/dev-openldap-manifest.yaml
---
# Source: openldap/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-openldap
  labels:
    app: openldap
    chart: openldap-1.0.0
    release: dev
    heritage: Tiller
spec:
  ports:
    - name: ldap-port
      protocol: TCP
      port: 389
      targetPort: ldap-port
    - name: ssl-ldap-port
      protocol: TCP
      port: 636
      targetPort: ssl-ldap-port
  selector:
    app: openldap
    release: dev
  type: ClusterIP

---
# Source: openldap/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name:  dev-openldap
  labels:
    app: openldap
    chart: openldap-1.0.0
    release: dev
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
      release: dev
  template:
    metadata:
      annotations:
        checksum/configmap-env: 0d2a7f907e23d863ac805a3ec80d9b658ea6644955f1d0b82fe8fd1a531d6f9a
      labels:
        app: openldap
        release: dev
    spec:
      containers:
        - name: openldap
          image: "osixia/openldap:1.3.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ldap-port
              containerPort: 389
            - name: ssl-ldap-port
              containerPort: 636
          volumeMounts:
            - name: data
              mountPath: /var/lib/ldap
              subPath: data
            - name: data
              mountPath: /etc/ldap/slapd.d
              subPath: config-data
          livenessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 10
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            
      volumes:
        - name: certs
          emptyDir:
            medium: Memory
        - name: data
          persistentVolumeClaim:
            claimName: dev-openldap
---
# Source: openldap/templates/configmap-customldif.yaml
#
# A ConfigMap spec for openldap slapd that map directly to files under
# /container/service/slapd/assets/config/bootstrap/ldif/custom
#

---
# Source: openldap/templates/tests/openldap-test-runner.yaml

---
# Source: openldap/templates/tests/openldap-tests.yaml
